# mini-projects

./: .gitattributes  .gitignore  README.md
0_Template/: README.md
2025-10_MOOCfi_File_Extracter/: main.py
2025-12_Console_FPS/: Console_FPS.slnx  README.md  main.cpp
2025-12_ShutTheBox_Simulator/: LOG.md  game_entities.py
2026-01_LULC_Mapping/: README.md  data.csv  img_to_csv.py  requirements.txt  training_data_points.csv
2026-02_Consalgo_Visualizer/: Consalgo_Visualizer.cpp  Consalgo_Visualizer.slnx
2026-02_StemLeaf_Generator/: LOG.md  StemLeaf_Generator.slnx  StemLeaf_Generator.vcxproj  StemLeaf_Generator.vcxproj.filters  test_single_col.csv
2026-03_Markov_Predictor/: Markov_Predictor.slnx  Markov_Predictor.vcxproj  README.md  main.cpp  model_school.json  test.h  trigram.json  utils.h
2026-03_VIBE_Hack_A_Known/: README.md  TASKS.md  TECH.md  package-lock.json
2026-04_Pong_Game/: Pong_Game.vcxproj
2026-05_ESP32_Demos/: README.md
2026-05_Rudimentary_AI_Agent/: .gitignore  README.md  pyproject.toml  scratchpad.md
2026-05_Rudimentary_AI_Agent/src/2026_05_rudimentary_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
2026-05_Rudimentary_AI_Agent/src/agent/: config.py  main.py  prompts.py
2026-05_Rudimentary_AI_Agent/src/agent/core/: memory.py  runner.py
2026-05_Rudimentary_AI_Agent/src/agent/llm/: client.py
2026-05_Rudimentary_AI_Agent/src/agent/tools/: base_tool.py  calculator.py
2026-05_Rudimentary_AI_Agent/tests/: test.cpp
2026-05_Spalten/: README.md  Spalten.slnx  Spalten.vcxproj  Spalten.vcxproj.filters  main.cpp  model.h  utils.h
(+186 files in other folders)
